--- a/html/behavioral-patterns.html
+++ b/html/behavioral-patterns.html
@@ -29,7 +29,7 @@
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p>Once you&#8217;ve built your game&#8217;s stage and decorated it with actors and props, all
 that remains is to start the scene. For this, you need behavior&#8202;&mdash;&#8202;the script
-that tells each entity in your game what do to.</p>
+that tells each entity in your game what to do.</p>
 <p>Of course all code is &#8220;behavior&#8221;, and all software is defining behavior, but
 what&#8217;s different about games is often the <em>breadth</em> of it that you have to
 implement. While your word processor may have a long list of features, it pales
