--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -272,7 +272,10 @@ some more boxes that are next to it. He doesn&#8217;t know if you want those (an
 <p>Now we go back to step one for <em>every component of every entity in the game</em>.</p>
 </li>
 </ol>
-<p>The scary part is we have no idea how any of these objects are laid out in memory. We&#8217;re completely at the mercy of the memory manager. As entities get allocated and freed over time, the heap is likely to become increasingly randomly organized.</p>
+<p>The scary part is we have no idea how these objects are laid out in memory.
+We&#8217;re completely at the mercy of the memory manager. As entities get allocated
+and freed over time, the heap is likely to become increasingly randomly
+organized.</p>
 <p><span name="lines"></span></p>
 <p><img src="images/data-locality-pointer-chasing.png" /></p>
 <aside name="lines">
