--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -190,8 +190,8 @@ right choice.</p>
 </li>
 </ol>
 <h3><a href="#memory-size-for-each-object-is-fixed" name="memory-size-for-each-object-is-fixed">Memory size for each object is fixed</a></h3>
-<p>Most pool implementations store the objects in an array of in-
-place objects. If all of your objects are of the same type, this is
+<p>Most pool implementations store the objects in an array of in-place
+objects. If all of your objects are of the same type, this is
 fine. However, if you want to store objects of different types in the
 pool, or instances of subclasses that may add fields, you need to
 ensure that each slot in the pool has enough memory for the <em>largest</em>
