--- a/html/prototype.html
+++ b/html/prototype.html
@@ -514,8 +514,9 @@ specifically <em>delegation</em>, can be useful.</p>
 <p>If you were to count all the bytes in a game that are code compared to the ones
 that are data, you&#8217;d see the fraction of data has been increasing steadily since
 the dawn of programming. Early games procedurally generated almost everything so
-they could fit on floppies and old game cartidges. In many games today, the code
-is just an &#8220;engine&#8221; that drives the game, which is defined entirely in data.</p>
+they could fit on floppies and old game cartridges. In many games today, the
+code is just an &#8220;engine&#8221; that drives the game, which is defined entirely in
+data.</p>
 <p>That&#8217;s great, but pushing piles of content into data files doesn&#8217;t magically
 solve the organizational challenges of a large project. If anything, it makes it
 harder. The reason we use programming languages is because they have tools for
