--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -64,33 +64,32 @@
 <p>Нам нужна эта мировая трансформация каждую отрисовку, так что операции с матрицами могут стать занозой в заднице. Поддерживать их в актуальном состоянии непросто, потому что когда родительский объект двигается, это влияет и на него, и на всех его детей рекурсивно. </p>
 <p>Очевидный вариант&#8202;&mdash;&#8202;это вычислять трансформации прямо при рисовании. Каждую отрисовку мы будем спускаться по графу, начиная с самого верха, и вычислять мировую трансформацию для каждого объекта. А потом рисовать его.</p>
 <p>Этот вариант ужасен до невозможности. На практике, большинство объектов не передвигаются&#8202;&mdash;&#8202;вспомните про статические объекты, из которых состоит уровень. Нет необходимости делать лишнюю работу и вычислять их координаты каждый раз.</p>
-<h3><a href="#cached-world-transforms" name="cached-world-transforms">Cached world transforms</a></h3>
-<p>The obvious answer is to <em>cache</em> it. In each object, we store its local transform and its derived world transform. When we render, we just use the precalculated world transform. If the object never moves, that&#8217;s always up to date and everything&#8217;s happy.</p>
-<p>When an object <em>does</em> move, the simple approach is to refresh its world transform right then. But don&#8217;t forget the hierarchy! When a parent moves, we have to recalculate its world transform <em>and all of its children&#8217;s, recursively</em>.</p>
-<p>Imagine some busy gameplay. In a single frame, the ship gets tossed on the ocean, the crow&#8217;s nest rocks in the wind, the pirate leans to the edge, and the parrot hops onto his head. We changed four local transforms. If we recalculate world transforms eagerly whenever a local transform changes, what ends up happening?</p>
+<h3><a href="#используем-кэш" name="используем-кэш">Используем кэш</a></h3>
+<p>Очевидный подход&#8202;&mdash;&#8202;кэшировать трансформации. В каждом объекте мы будем хранить локальную и мировую трансформацию. При отрисовке мы используем мировую трансформацию, которая уже вычислена. И если объект не двигается, то она всегда актуальна&#8202;&mdash;&#8202;и все довольны.</p>
+<p>Что делать, если объект <em>передвинули</em>? Можно сразу же пересчитать мировую трансофрмацию. Только у нас же иерархия! Когда двигается родитель, нужно пересчитать его трансформацию и <em>всех его детей, рекурсивно</em>.</p>
+<p>Представьте, что у нас довольно сложная игра. В каждом цикле корабль толкают волны, бочка раскачивается на ветру, пирата постоянно тошнит, а попугай прыгает через голову. И тут мы меняем четыре локальных трансформации. Если мы сразу же начнем пересчитывать мировые, то во что это выльется?</p>
 <p><span name="stars"></span>
 <img src="images/dirty-flag-update-bad.png" /></p>
 <aside name="stars">
-<p>You can see on the lines marked &#x2605; that we&#8217;re recalculating the parrot&#8217;s
-world transform <em>four</em> times when we only need the result of the final one.</p>
+<p>Если посмотреть на линии, отмеченные &#x2605;, то можно увидеть, что мы <em>четыре</em> раза пересчитывали попугая, хотя будем использовать только результаты последнего пересчета.</p>
 </aside>
-<p>We only moved four objects, but we did <em>ten</em> world transform calculations. That&#8217;s six pointless calculations that get thrown out before they are ever used by the renderer. We calculated the parrot&#8217;s world transform <em>four</em> times, but it only got rendered once.</p>
-<p>The problem is that a world transform may depend on several local transforms. Since we recalculate immediately each time <em>one</em> of those changes, we end up recalculating the same transform multiple times when more than one of the local transforms it depends on changes in the same frame.</p>
-<h3><a href="#deferred-recalculation" name="deferred-recalculation">Deferred recalculation</a></h3>
-<p>We&#8217;ll solve this by <span name="decoupling">decoupling</span> changing local transforms from updating the world transforms. This lets us change a bunch of local transforms in a single batch and <em>then</em> recalculate the affected world transform once after all of those modifications are done, right before we need it to render.</p>
+<p>Мы всего лишь передвинули четыре объекта, а пришлось пересчитать <em>десять</em> мировых трансформаций. Шесть бесполезных вычислений будут выкинуты, потому что их результат нам не интересен. Мы четыре раза пересчитали попугая, хотя он был нарисован всего один раз.</p>
+<p>Проблемы в том, что мировая трансформация зависит от нескольких локальных. Мы начинали перерасчет сразу после того, как изменилась хотя бы одна из них. В результат пришлось пересчитать мировую трансформацию для одного и того же объекта столько раз, сколько локальных трансформаций родителей изменилось.</p>
+<h3><a href="#отложенные-вычисления" name="отложенные-вычисления">Отложенные вычисления</a></h3>
+<p>Мы можем решить эту проблему, если <span name="decoupling">разделим</span> обновление локальной и мировой трансформации. Это позволит изменять набор локальных трансформаций одних махом, и <em>затем</em> пересчитать те мировые трансформации, которые это затронуло, прямо перед отрисовкой.</p>
 <aside name="decoupling">
-<p>It&#8217;s interesting how much of software architecture is just intentionally engineering a little slippage.</p>
+<p>Занимательно&#8202;&mdash;&#8202;столько архитектур основано на маленьких хитростях!</p>
 </aside>
-<p>To do this, we add a flag to each object in the graph. When the local transform changes, we set it. When we need the object&#8217;s world transform, we check the flag. If it&#8217;s set, we calculate the world transform then and clear the flag. The flag represents, &#8220;Is the world transform out of date?&#8221; For reasons that aren&#8217;t entirely clear, the traditional name for this &#8220;out-of-date-ness&#8221; is &#8220;dirty&#8221;. Hence: <em>a dirty flag</em>.</p>
-<p>If we apply this pattern and then move all of the objects in our previous example, the game ends up doing:</p>
+<p>Мы добавим флажок к каждому объекту в графе. Когда будет менятся локальная трансформация, мы его выставим. И когда нам понадобиться мировая, мы будем проверять этот флаг. Если он выставлен, то мы пересчитаем мировую трансформацию и очистим флаг. Этот флаг как бы говорит нам &#8220;нужно обновлять матрицы?&#8221; По причинам, которые не совсем ясны, обычное название для таких &#8220;уже неточных&#8221; данных&#8202;&mdash;&#8202;это &#8220;грязные&#8221; (dirty). Вот и получился <em>грязный флаг</em>.</p>
+<p>Если мы применим этот подход, и повторим пример с четырьмя объектами, то в результате увидим:</p>
 <p><img src="images/dirty-flag-update-good.png" /></p>
-<p>That&#8217;s the best you could hope to do: the world transform for each affected object is calculated exactly once. With just a single bit of data, this pattern does a few things for us:</p>
+<p>Это лучшее, на что можно было бы надется: мировая трансформация для каждого тронутого объекта вычисляется только один раз. С помощью одного бита, это паттерн сделал несколько вещей:</p>
 <ol>
-<li>It collapses modifications to multiple local transforms along an object&#8217;s parent chain into a single recalculation on the object.</li>
-<li>It avoids recalculation on objects that didn&#8217;t move.</li>
-<li>And a minor bonus: if an object gets removed before it&#8217;s rendered, it doesn&#8217;t calculate its world transform at all.</li>
+<li>Множество изменений локальных трансформаций он превратил в одно вычисление для каждого объекта.</li>
+<li>Избавляет от необходимости пересчитывать статические объекты.</li>
+<li>И мини-бонус: если объект удалили до того, как он был нарисован, то у него ничего не вычисляется вообще.</li>
 </ol>
-<h2><a href="#the-pattern" name="the-pattern">The Pattern</a></h2>
+<h2><a href="#общий-подход" name="общий-подход">Общий подход</a></h2>
 <p>A set of <strong>primary data</strong> changes over time. A set of <strong>derived data</strong> is determined from this using some <strong>expensive process</strong>. A <strong>&#8220;dirty&#8221; flag</strong> tracks when the derived data is out of sync with the primary data. It is <strong>set when the primary data changes</strong>. When the derived data is requested, if the flag is set <strong>it is processed then and the flag is cleared.</strong> Otherwise, the previous <strong>cached derived data</strong> is used.</p>
 <h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
 <p>Compared to some other patterns in this book, this one solves a pretty specific problem. Also, like most optimizations, you should only reach for it when you have a performance problem big enough to justify the added code complexity.</p>
